--- a/submit.html
+++ b/submit.html
@@ -60,7 +60,7 @@
             });
 
             // Kirim ke CallMeBot
-            const whatsappUrl = `https://api.callmebot.com/whatsapp.php?phone=${6281270916520}&text=${message}&apiKey=${3131283}`;
+            const whatsappUrl = `https://api.callmebot.com/whatsapp.php?phone=+6281270916520&text=This+is+a+test&apikey=3131283`;
             window.location.href = whatsappUrl;
         }
     </script>
