--- a/submit.html
+++ b/submit.html
@@ -1,73 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sending Order...</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .loading-container {
-            text-align: center;
-        }
-        .spinner {
-            width: 50px;
-            height: 50px;
-            border: 5px solid #f3f3f3;
-            border-top: 5px solid #3498db;
-            border-radius: 50%;
-            animation: spin 1s linear infinite;
-            margin: 0 auto;
-        }
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sending Order...</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 50px;
+    }
+    .spinner {
+      border: 4px solid rgba(0, 0, 0, 0.1);
+      border-left-color: #000;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      margin: 20px auto;
+      animation: spin 1s linear infinite;
+    }
+    @keyframes spin {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
+    }
+  </style>
 </head>
 <body>
-    <div class="loading-container">
-        <div class="spinner"></div>
-        <p>Sending Order...</p>
-    </div>
+  <h2>Sending order...</h2>
+  <div class="spinner"></div>
 
-    <script>
-        // Ambil data dari URL Glide Apps
-        const urlParams = new URLSearchParams(window.location.search);
-        const customerName = urlParams.get('customerName');
-        const orders = urlParams.get('orders');
-        const apikey = urlParams.get('apikey');
+  <script>
+    // Ambil parameter dari URL
+    const urlParams = new URLSearchParams(window.location.search);
+    const customerName = urlParams.get('customerName');
+    const allOrders = urlParams.get('allOrders');
 
-        // Cek jika apikey tidak ditemukan
-        if (!apikey) {
-            alert('API Key is missing!');
-        } else if (!orders) {
-            alert('No orders found!');
-        } else {
-            // Pisahkan semua order berdasarkan simbol "|"
-            const orderList = orders.split('|');
-
-            // Buat pesan otomatis
-            let message = `Customer Name: ${customerName}%0A`;
-
-            orderList.forEach((order, index) => {
-                const [orderId, date, item, quantity, from, to] = order.split(',');
-                message += `%0AOrder ${index + 1}:%0AOrder ID: ${orderId}%0ADate: ${date}%0AItem: ${item}%0AQuantity: ${quantity}%0AFrom: ${from}%0ATo: ${to}%0A------------------------`;
-            });
-
-            // Encode pesan untuk menghindari karakter khusus
-            const encodedMessage = encodeURIComponent(message);
-
-            // Kirim ke CallMeBot
-            const whatsappUrl = `https://api.callmebot.com/whatsapp.php?phone=+6281270916520&text=${encodedMessage}&apikey=${apikey}`;
-            window.location.href = whatsappUrl;
-        }
-    </script>
+    // Kirim data ke Google Apps Script
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbxLCJ831Et0aV10c-1lVf6VAwjZACGmfxtSHgT1dbReI3oL04WiBm4huolthoaG3gkxJQ/exec';
+    fetch(scriptURL, {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ customerName, allOrders })
+    })
+    .then(response => response.text())
+    .then(data => {
+      console.log('Success:', data);
+      document.querySelector('h2').innerText = 'Order Submitted';
+      setTimeout(() => window.close(), 3000);
+    })
+    .catch((error) => {
+      console.error('Error:', error);
+      document.querySelector('h2').innerText = 'Failed to submit order';
+    });
+  </script>
 </body>
-</html>
+</html>    
