--- a/submit.html
+++ b/submit.html
@@ -1,71 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sending Order...</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 50px;
-    }
-    .spinner {
-      border: 4px solid rgba(0, 0, 0, 0.1);
-      border-left-color: #000;
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      margin: 20px auto;
-      animation: spin 1s linear infinite;
-    }
-    @keyframes spin {
-      from { transform: rotate(0deg); }
-      to { transform: rotate(360deg); }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Submitting Order...</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 20% auto;
+        }
+        .spinner {
+            border: 4px solid rgba(0, 0, 0, 0.1);
+            border-top: 4px solid #007bff;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 1s linear infinite;
+            margin: 20px auto;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+    </style>
 </head>
 <body>
-  <h2>Sending order...</h2>
-  <div class="spinner"></div>
+    <h2>Sending order...</h2>
+    <div class="spinner"></div>
 
-  <script>
-    // Fungsi untuk mendapatkan parameter dari URL
-    function getQueryParams() {
-      const params = new URLSearchParams(window.location.search);
-      return params;
-    }
+    <script>
+        // Ambil parameter dari URL Glide Apps
+        const urlParams = new URLSearchParams(window.location.search);
+        const customerName = urlParams.get('customerName');
+        const allOrders = urlParams.get('allOrders');
+        const agentEmail = urlParams.get('agentEmail');
 
-    // Fungsi untuk mengirim data ke Google Apps Script
-    function sendData() {
-      const params = const params = new URLSearchParams(window.location.search);
-      const scriptUrl = 'https://script.google.com/macros/s/AKfycbxLCJ831Et0aV10c-1lVf6VAwjZACGmfxtSHgT1dbReI3oL04WiBm4huolthoaG3gkxJQ/exec'; // Ganti dengan URL Web App Apps Script Anda
-      const url = ${scriptUrl}?${params.toString()};
+        // URL Apps Script (ganti dengan URL yang benar)
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbxLCJ831Et0aV10c-1lVf6VAwjZACGmfxtSHgT1dbReI3oL04WiBm4huolthoaG3gkxJQ/exec';
 
-      // Tampilkan indikator loading
-      document.getElementById('loading').style.display = 'block';
+        // Buat URL dengan parameter untuk kirim ke Apps Script
+        const fullURL = ${scriptURL}?customerName=${encodeURIComponent(customerName)}&allOrders=${encodeURIComponent(allOrders)}&agentEmail=${encodeURIComponent(agentEmail)};
 
-      fetch(url, { method: 'GET' })
-        .then(response => response.text())
-        .then(data => {
-          console.log('Response:', data);
-          document.getElementById('status').innerText = 'Order Submitted';
-          // Tutup jendela setelah 2 detik
-          setTimeout(() => window.close(), 2000);
-        })
-        .catch(error => {
-          console.error('Error:', error);
-          document.getElementById('status').innerText = 'Submission Failed';
-        })
-        .finally(() => {
-          // Sembunyikan indikator loading
-          document.getElementById('loading').style.display = 'none';
-        });
-    }
-
-    // Panggil fungsi sendData saat halaman dimuat
-    window.onload = sendData;
-  </script>
-
+        // Kirim data ke Apps Script menggunakan fetch
+        fetch(fullURL)
+            .then(response => response.text())
+            .then(result => {
+                alert(result);  // Tampilkan pesan sukses dari Apps Script
+                window.close(); // Tutup halaman otomatis setelah sukses
+            })
+            .catch(error => {
+                alert('Failed to submit order: ' + error);
+            });
+    </script>
 </body>
-</html>    
+</html>
